--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   },
   "main": "lib/commonjs/index.js",
   "module": "lib/module/index.js",
-  "react-native": "src/index.tsx",
+  "react-native": "index.ts",
   "types": "lib/typescript/src/index.d.ts",
   "files": [
     "src",
-    "lib"
+    "lib",
+    "ios",
+    "PeekAndPop.podspec"
   ],
   "scripts": {
     "lint": "eslint --ext .js,.ts,.tsx .",
